k8s/esp_echo_http.yaml
# Copyright 2016 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: esp-echo
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: esp-echo
  # Change this type to NodePort if you use Minikube.
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-echo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-echo
    spec:
      # [START secret-1]
      volumes:
        - name: service-account-creds
          secret:
            secretName: service-account-creds
      # [END secret-1]
      # [START service]
      containers:
        - name: esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          args: [
            "--http_port", "8080",
            "--backend", "127.0.0.1:8081",
            "--service", "SERVICE_NAME",
            "--version", "SERVICE_CONFIG_ID",
            "--service_account_key", "/etc/nginx/creds/service-account-creds.json",
          ]
      # [END service]
          ports:
            - containerPort: 8080
          # [START secret-2]
          volumeMounts:
            - mountPath: /etc/nginx/creds
              name: service-account-creds
              readOnly: true
          # [END secret-2]
        - name: echo
          image: gcr.io/endpoints-release/echo:latest
          ports:
            - containerPort: 8081
